<resources>
    <string name="app_name">Popular Movies</string>

    //The movie db API KEY
    <string name="API_KEY">Your API</string>
    //The Movies URL
    <string name="MOVIES_URL">https://api.themoviedb.org/3/movie/</string>
    //Poster Url
    <string name="POSTER_MOVIES_URL">http://image.tmdb.org/t/p/w500</string>
    //YouTube Link
    <string name="YOUTUBE_LINK">https://www.youtube.com/watch?v=</string>

    <string name="pref_sort_key" translatable="false">Sort</string>
    <string name="pref_sort_label">Movies Sorted By</string>
    <string name="pref_sort_default">Popular</string>
    <string name="pref_sort_popular">Popular</string>
    <string name="pref_sort_top_rated">Top Rated</string>
    <string name="pref_sort_popular_label">Popular</string>
    <string name="pref_sort_top_rated_label">Top Rated</string>
    <string name="pref_sort_popular_value" translatable="false">Popular</string>
    <string name="pref_sort_top_rated_value" translatable="false">Top Rated</string>

    <string name="movie_rating">Rating</string>
    <string name="movie_title">Title</string>
    <string name="movie_details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="settings">Settings</string>

    <string name="image_details_desc">Image Details</string>
    <string name="release_date_desc">Release Date</string>
    <string name="movie_title_desc">Title</string>
    <string name="movie_poster_desc">Movie Poster</string>


    <string name="pref_sort_favorite">Favorite</string>
    <string name="pref_sort_favorite_label">Favorite</string>
    <string name="pref_sort_favorite_value" translatable="false">Favorite</string>

    <string name="trailer">Trailers : (Share Trailer by LongClick)</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="reviews">Reviews :</string>
    <string name="author">Author</string>

</resources>
